<?xml version="1.0"?>
<package format="2">
  <name>mobile_dd_robot</name>
  <version>0.0.0</version>
  <description>ROS 1 port of mobile_dd_robot</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>xacro</depend>
</package>