<?xml version="1.0"?>
<package format="2">
  <name>reachability_analysis</name>
  <version>0.0.0</version>
  <description>Reachability analysis for safety checks</description>
  <maintainer email="ali_reza_naderi@outlook.com">ali</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
</package>