<?xml version="1.0"?>
<package format="2">
  <name>system_identification</name>
  <version>0.0.0</version>
  <description>System identification for robot dynamics</description>
  <maintainer email="ali_reza_naderi@outlook.com">ali</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
</package>